# simple-nus3audio-gui

./: Cargo.toml  LICENSE  README.md
src/: codec.rs  item_properties.rs  layout.rs  list.rs  main.rs  playback.rs  rect.rs  settings.rs  util.rs
