[package]
name = "simple-nus3audio-gui"
version = "0.5.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Un/Packing nus3audio files
nus3audio = "1.2"
# Audio playback
kira = "0.8"
# Audio decoding
rodio = "0.17"
# TOML settings
toml = "0.8"
lazy_static = "1.4"
# Getting a settings directory
directories = "5.0"
# Find one of mono, dotnet, or wine (On targets that are not Windows)
#[cfg(not(target_os = "windows"))]
which = "5.0"
# Open the browser
open = "5.0"
# WAV encoding
wav = "1.0"
# Audio resampler
fon = "0.6"
# Reading vgmstream metadata output as JSON
json = "0.12"

[dependencies.fltk]
# Graphics toolkit
version = "1.4"
